# CeNTREX-TlF-Couplings

./: README.md  pyproject.toml
centrex_TlF_couplings/: __init__.py  branching.py  collapse.py  coupling_matrix.py  matrix_elements.py  polarization.py  transition.py  transition_selection.py  utils.py
centrex_tlf_couplings/: __init__.py  branching.py  coupling_matrix.py  matrix_elements.py  polarization.py  transition.py  utils.py  utils_compact.py
centrex_tlf_couplingss/: transition.py
examples/: generate coupling field.ipynb
tests/: collapse_matrices_test.npy  coupling_matrix_test.npy  test_branching.py  test_collapse.py  test_coupling_matrix.py  test_matrix_elements.py  test_utils.py
