[tool.poetry]
name = "CeNTREX-TlF-couplings"
version = "0.1.0"
description = "Generate couplings and coupling matrices for the TlF X and B states"
authors = ["olivier grasdijk <jgrasdijk@anl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.20"
centrex_TlF_hamiltonian = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
