[tool.poetry]
name = "centrex_tlf_couplings"
version = "0.2.0"
description = "Generate couplings and coupling matrices for the TlF X and B states"
authors = ["olivier grasdijk <jgrasdijk@anl.gov>"]
license = "MIT"
packages = [
    { include = "centrex_tlf_couplings" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.20"
pandas = "^1.4"
centrex_tlf_hamiltonian = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
